--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,10 @@ environment:
 install:
  - set PATH=%PYTHON%\Scripts;%PYTHON%;%PATH%
  - python -m pip install --upgrade pip
- - ps: Start-FileDownload 'https://ros-win.visualstudio.com/defaultcollection/ros-win/_apis/git/repositories/ros-win/items?api-version=1.0&scopepath=%2Ftools%2Fcatkin-requirements.patch.txt' -FileName 'catkin-requirements.patch.txt'
- - type catkin-requirements.patch.txt
+ - pip install -U rosdep rosinstall_generator wstool rosinstall
+ - set CATKIN_PY2_PATCH_REQUIREMENTS=https://ros-win.visualstudio.com/defaultcollection/ros-win/_apis/git/repositories/ros-win/items?api-version=1.0&scopepath=%2Ftools%2Fcatkin-requirements.patch.txt
+ - pip install -U --force-reinstall --no-deps -r %CATKIN_PY2_PATCH_REQUIREMENTS%
+ - pip freeze
 
 build_script:
  - dir
