--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ install:
  - python -m pip install --upgrade pip
  - pip install -U setuptools
  - pip install -U rosdep rosinstall_generator wstool rosinstall -v
+ - dir 'c:\python27amd64\lib\site-packages'
 
  # patch the tools with ros-win changes
  - ps: Start-FileDownload 'https://ros-win.visualstudio.com/defaultcollection/ros-win/_apis/git/repositories/ros-win/items?api-version=1.0&scopepath=%2Ftools%2Fcatkin-requirements.patch.txt' -FileName 'catkin-requirements.patch.txt'
