--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,12 +12,12 @@ install:
  # install ros workspace tools
  - python -m pip install --upgrade pip
  - pip install -U setuptools
- - pip install -U rosdep rosinstall_generator wstool rosinstall -v
- - dir 'c:\python27amd64\lib\site-packages'
+ - pip install -U rosdep rosinstall_generator wstool rosinstall
+ - dir c:\python27amd64\lib\site-packages
 
  # patch the tools with ros-win changes
  - ps: Start-FileDownload 'https://ros-win.visualstudio.com/defaultcollection/ros-win/_apis/git/repositories/ros-win/items?api-version=1.0&scopepath=%2Ftools%2Fcatkin-requirements.patch.txt' -FileName 'catkin-requirements.patch.txt'
- - pip install -U --no-deps -r catkin-requirements.patch.txt -v
+ - pip install -U --no-deps -r catkin-requirements.patch.txt
  - pip freeze
 
  # add ros-win Chocolatey source for rosdep
