--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,8 @@ install:
  # install ros workspace tools
  - python -m pip install --upgrade pip
  - pip install -U setuptools
- - pip install -U rosdep rosinstall_generator wstool rosinstall
+# - pip install -U rosdep rosinstall_generator wstool rosinstall
+ - pip install -U wstool
  - dir c:\python27amd64\lib\site-packages
 
  # patch the tools with ros-win changes
