--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ install:
  - python -m pip install --upgrade pip
  - pip install -U setuptools
 # - pip install -U rosdep rosinstall_generator wstool rosinstall
- - pip install -U wstool
+ - pip install wstool
  - dir c:\python27amd64\lib\site-packages
 
  # patch the tools with ros-win changes
