--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ install:
 # - pip install -U rosdep rosinstall_generator wstool rosinstall
  - pip install wstool
  - dir c:\python27amd64\lib\site-packages
+ - dir c:\python27amd64\lib\site-packages\wstool-0.1.17-py2.7.egg-info
 
  # patch the tools with ros-win changes
  #- ps: Start-FileDownload 'https://ros-win.visualstudio.com/defaultcollection/ros-win/_apis/git/repositories/ros-win/items?api-version=1.0&scopepath=%2Ftools%2Fcatkin-requirements.patch.txt' -FileName 'catkin-requirements.patch.txt'
