--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,14 +13,14 @@ install:
  - python -m pip install --upgrade pip
  - pip install -U setuptools
 # - pip install -U rosdep rosinstall_generator wstool rosinstall
- - pip install wstool
+ - ps: pip install wstool
  - dir c:\python27amd64\lib\site-packages
  - dir c:\python27amd64\lib\site-packages\wstool-0.1.17-py2.7.egg-info
 
  # patch the tools with ros-win changes
  #- ps: Start-FileDownload 'https://ros-win.visualstudio.com/defaultcollection/ros-win/_apis/git/repositories/ros-win/items?api-version=1.0&scopepath=%2Ftools%2Fcatkin-requirements.patch.txt' -FileName 'catkin-requirements.patch.txt'
  #- pip install -U --no-deps -r catkin-requirements.patch.txt
- - pip uninstall wstool -y -v
+ - ps: pip uninstall wstool -y -v
  - pip install -U --no-deps git+https://github.com/ms-iot/wstool@init_windows#egg=wstool -vvv
  - pip freeze
 
