--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,4 +28,6 @@ install:
 build_script:
  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
  - call "C:\opt\ros\melodic\x64\setup.bat"
- - rospack list
+ - rosdep init
+ - rosdep update
+ - rosdep install --from-paths C:\opt\ros\melodic\x64 --ignore-src -r -y
