--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,7 @@ install:
 
  # patch the tools with ros-win changes
  - curl --output "catkin-requirements.patch.txt" "https://ros-win.visualstudio.com/defaultcollection/ros-win/_apis/git/repositories/ros-win/items?api-version=1.0&scopepath=%2Ftools%2Fcatkin-requirements.patch.txt"
+ - dir
  - pip install -U --ignore-installed --no-deps --force-reinstall -r catkin-requirements.patch.txt
  - pip freeze
 
